# ai_product_intelligence

./: .gitignore  AUTOMATION_SETUP.md  ENV.example  README.md  envrc.example  prd.json  progress.txt
agents/: .gitignore  CLAUDE.md  README.md  prd.json  requirements.txt  setup.py
agents/ai_content_intelligence/: .gitignore  CAROUSEL_IMAGE_GENERATOR.md  CLAUDE.md  EVAL_SYSTEM.md  README.md
agents/app_analysis_system/: README.md  requirements.txt
agents/carousel-generator/: EVAL_SYSTEM_RESULTS.md  SESSION_RETROSPECTIVE_2026-02-06.md  pptx.md  pptxgenjs.md  requirements.txt
agents/journal-classifier/: CLAUDE.md
agents/knowledge_brain/: README.md
app_analysis_system/: CLAUDE.md  PRD_PHASE_1.md  run_pipeline.py
automation_core/: README.md  pyproject.toml
automation_core/src/automation_core/: cli.py  config.py
automation_core/src/automation_core/auth/: google.py
automation_core/src/automation_core/connectors/: google_drive.py  google_sheets.py  notion.py
infrastructure/: OPENCLAW_SETUP.md  README.md
infrastructure/supabase_mcp_server/: README.md  claude_desktop_config.json  pyproject.toml  requirements-server.txt  requirements.txt  setup_https.sh  setup_vps.sh  traefik-config.yml  udo journalctl -u supabase-mcp -n 50 --no-pager
infrastructure/supabase_mcp_server/src/supabase_mcp/: __init__.py
infrastructure/supabase_mcp_server/tests/: test_supabase_client.py
infrastructure/supabase_mcp_server/tests/integration/: __init__.py  test_workflow.py
knowledge_brain/: CLAUDE.md
migration-scripts/: FULL-SERVER-MIGRATION-GUIDE.md  MIGRATION-README.md  QUICK-START-MIGRATION.md  README.txt  START-HERE.md  full-server-backup.sh  full-server-restore.sh  openclaw-backup.sh  openclaw-migration-guide.md  openclaw-restore.sh  openclaw-transfer-to-new-server.sh  openclaw-verify.sh  test-migration-readiness.sh  verify-server-migration.sh
open_claw_installation/: .gitignore  CLAUDE_CODE_QUICKSTART.md  INSTALLATION_GUIDE.md  QUICK_START.md  README.md  install_openclaw.sh  security_hardening.sh
project_bootstrap/: README.md  setup.py
reddit_sentiment_analyzer/: =2.3.0  app.py  env.example  main.py  run_blue_bottle.py  test_flo.py  test_full_workflow.py  test_reddit_scrape.py  test_workflow_demo.py  test_workflow_simple.py
shared/: README.md
shared/project_bootstrap/: README.md  USAGE.md  pyproject.toml
shared/project_bootstrap/src/bootstrap/: cli.py  environment.py  scaffold.py
shared/project_bootstrap/src/bootstrap/templates/claude_md/: api.md  base.md
shared/project_bootstrap/src/bootstrap/templates/env/: default.env
shared/project_bootstrap/src/bootstrap/templates/gitignore/: node.txt  python.txt
shared/project_bootstrap/src/bootstrap/templates/python/: __init__.py.j2  requirements-base.txt  test_main.py.j2
shared/project_bootstrap/src/project_bootstrap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
supabase_mcp_server/: .gitignore  DEPLOYMENT.md  Makefile  deploy.sh  run_server.sh  server.py  server_remote.py  setup_traefik_mcp.sh  setup_traefik_simple.sh
token_calculator/: README.md  __init__.py  app.py  calculator.py  comparison.py  models.py  requirements.txt  token_calculator.py
(+205 files in other folders)
